--- a/src/components/Data/Data.css
+++ b/src/components/Data/Data.css
@@ -1,40 +1,107 @@
 .container{
     display: flex;
-    justify-content: space-around;
     flex-wrap: wrap;
+    background-color:rgba(255, 255, 255, 0.621);
+    border-radius: 15px;
+    align-items: center;
+    padding: 30px 5px;
+    margin: 35px 100px;
 }
 .item{
-    border: 1px solid black;
-    background-color: cornsilk;
-    border-radius: 15px;
-    padding: 10px;
-    width: 18%;
+    width: 12%;
+    height: 180px;
 }
 .date{
-    text-align: center;
-    font-size: 30px;
-    font-weight: 600;
-    margin-bottom: 5px;
-    color: rgb(133, 236, 254);
-    -webkit-text-stroke: .02em rgb(0, 0, 0);
+    color: gray;
+    font-size: 13px;
 }
 .weekDay{
     text-align: center;
     font-size: 20px;
-}
-.desc{
-    display: flex;
-    font-size: 18px;
-    font-weight: 800;
-    font-style: italic;
-    justify-content: space-between;
-}
-.descImg{
-    width: 40%;
-    text-align: center;
+    margin-bottom: 5px;
+    text-align: left;
 }
 .descTxt{
+    color: gray;
+    font-family: monospace;
+}
+.city{
+    margin-bottom: 30px;
+    font-size: 60px;
+    font-weight: 900;
+    text-align: center;
+    color: cornsilk;
+    -webkit-text-stroke: .02em rgb(0, 0, 0);
+}
+.today_left,.today_right,.item{
+    border: 1px solid black;
+    background-color: cornsilk;
+    border-radius: 15px;
+    padding: 10px;
+}
+.today_left{
+    width: 20%;
+}
+.today_right{
+    width: 50%;
+}
+.temp_icon{
     display: flex;
-    align-items: center;
-    width: 60%;
+    font-size: 30px;
+}
+.today_temp{
+margin: 8px 0px;
+ text-align: left;
+}
+.today_temp p{
+ font-size: 45px;
+ color: rgb(133, 236, 254);
+    -webkit-text-stroke: .02em rgb(0, 0, 0);
+}
+
+.today{ 
+    display: flex;
+}
+.right_icon{
+    border-radius: 50%;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 4px 2px 5px rgb(97, 216, 237);
+    margin: 5px;
+    margin-left: 15px;
+    height: 60px;
+ 
+}
+.right_icon img{
+    text-align: center;
+    width: 60px;
+}
+.left_icon img{
+    width: 100px;
+    margin-left: 35px;
+}
+.lines{
+    display: flex;
+}
+.lines span{
+    color: gray;
+    font-family: monospace;
+}
+.temp_span{
+    font-size: 12px;
+    color: gray;
+}
+.time{
+    display: flex;
+}
+.time_city{
+    color: gray;
+    font-size: 20px;
+}
+.descImg {
+    height: 50px;
+    width: 50px;
+    margin: 0;
+}
+.descImg img{
+    width: 100%;
 }
