feat: added changes

--- a/src/App.css
+++ b/src/App.css
@@ -5,5 +5,13 @@
 .weather{
     padding: 30px;
     height: 100%;
-    background-color: rgb(133, 236, 254);
+    /* width: 85rem; */
+    /* background-color: rgb(6, 26, 86); */
+}
+select{
+    border: 0.001px solid rgba(0, 0, 0, 0);
+    border-radius: 15px;
+}
+.change_theme{
+    cursor: pointer;
 }
