--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,27 +1,31 @@
 .header{
     display: flex;
-    margin-bottom: 15px;
-    width: 1160px;
-    
+    flex-wrap: wrap;
+    margin-bottom: 1rem;
+    justify-content: space-between;
 }
 .logo{
-    font-size: 23px;
+    font-size: 1.5rem;
     display: flex;
-    width: 50%;
     font-family: monospace;
     margin: 0;
 }
 .data{
-    width: 50%;
     text-align: right;
     padding: 10px;
+    margin: 0;
 }
 .data input{
-    background-color: cornsilk;
-    border: 0.5px solid rgb(81, 175, 218);
+    border: 0.005px solid rgba(109, 109, 109, 0);
     border-radius: 15px;
+    margin: 0 3px;
 }
 .logo p{
     padding: 7px 0;
     margin: 0;
+}
+@media (max-width: 550px) {
+    .logo{
+        font-size: 0.8rem;
+    }
 }
