--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -1,6 +1,16 @@
 .btn{
     background-color: cornsilk;
-    border: 1px solid rgb(76, 221, 246);
+    border: 0.001px solid rgba(0, 0, 0, 0);
     border-radius: 15px;
-    color: ;
+    margin: 0;
+}
+.input{
+    display: flex;
+    justify-content: right;
+}
+.input p{
+    margin: 0.2rem;
+}
+.change_theme{
+    margin: 0 0.1rem 0.2rem;
 }
